--- a/StyleSheets/style.css
+++ b/StyleSheets/style.css
@@ -103,6 +103,7 @@ body{
     font-size: 18px;
     letter-spacing: 2px;
     opacity: 0.95;
+    width: 100%;
   }
 
   .c-button1 {
@@ -264,20 +265,48 @@ body{
         background: #2d2d2d;
         color: white;
     }
-.col-md-12 {
+.contact {
   padding-top: 60px;
 }
-.col-md-12 a{
+.contact a{
   background-color: #2d2d2d;
   border: 20px solid #2d2d2d;
   color:#c5c5c5;
   border-radius: 5px;
   font-size: 25px;
+  display: inline-block;
+  margin: 10px;
 }
-.col-md-12 a:hover {
+.contact a:hover {
   background-color: #585757;
-  border: 22px solid #585757;
+  border: 20.5px solid #585757;
   color: rgb(193, 141, 38);
   border-radius: 5px;
   font-size: 25px;
+}
+
+/* thumbnail for our work */
+.thumbnail {
+  display: block;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  background-color: #2d2d2d;
+  border: 20px solid #2d2d2d;
+}
+.thumbnail p {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #c5c5c5;
+  font-size: 20px;
+  font-weight: 700;   
+  text-align: center;
+  letter-spacing: 2px;
+  transition: all 0.3s ease;
+  margin-top: 10px;
 }
