--- a/StyleSheets/style.css
+++ b/StyleSheets/style.css
@@ -322,8 +322,59 @@ body{
 .thumbnail:hover {
   background-color: #363636;
   border: 20px solid #363636;
-  color: rgb(193, 141, 38);
   border-radius: 5px;
   font-size: 25px;
   transition: 0.3s;
+}
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+} 
+
+.modal-content {
+  position: relative;
+  background-color: #2d2d2d;
+  color: #c5c5c5;
+  margin: auto;
+  padding: 0;
+  border: 5px solid #363636;
+  border-radius: 5px;
+  width: 80%;
+  max-width: 1200px;
+}
+
+.close {
+  color: #c5c5c5;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover, .close:focus {
+  color: #f1f1f1;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.seyfo {
+  color: black;
+  font-size: 20px;
+  font-weight: 700;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.seyfo:hover {
+  color: #2d2d2d;
+  text-decoration: none;
+  cursor: pointer;
 }
