--- a/StyleSheets/style.css
+++ b/StyleSheets/style.css
@@ -108,6 +108,7 @@ body{
     letter-spacing: 2px;
     opacity: 0.95;
     width: 100%;
+    bottom: 0;
 }
 
 .c-button1 {
@@ -378,3 +379,44 @@ body{
   text-decoration: none;
   cursor: pointer;
 }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #2d2d2d;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: #c5c5c5;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #363636}
+
+.dropbtn {
+  background-color: #2d2d2d;
+  color: #c5c5c5;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+  right: 0;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #363636;
+}
+
